# ros2_learning

./: novel1.txt  readme.md
install/: local_setup.sh  setup.sh
install/autopartol_interface/share/autopartol_interface/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/autopartol_robot/share/autopartol_robot/: package.sh
install/birdbot_application/lib/birdbot_application/: get_robot_pose  init_robot_pose  nav_to_pose  waypoint_follower
install/birdbot_application/share/birdbot_application/: package.bash  (+5 more)
log/: latest_build
src/autopartol_interface/: CMakeLists.txt
src/autopartol_robot/: package.xml  setup.py
src/autopartol_robot/autopartol_robot/: speaker.py
src/autopartol_robot/config/: partol_config.yaml
src/birdbot_application/: setup.cfg  setup.py
src/birdbot_description/: CMakeLists.txt
src/birdbot_description/config/: birdbot_ros2_controller.yaml
src/birdbot_description/launch/: gazebo_sim.launch.py
src/birdbot_description/urdf/: first_robot.urdf
src/birdbot_description/world/: custom_room.world
src/birdbot_navigation2/: CMakeLists.txt  package.xml
src/birdbot_navigation2/maps/: room2.yaml
src/demo_cpp_topic/: CMakeLists.txt  package.xml
src/demo_cpp_topic/src/: turtle_circle.cpp  turtle_circle_sub.cpp
src/demo_python_topic/: package.xml  setup.py
src/face_interfaces/: CMakeLists.txt
src/face_python_service/: setup.cfg  setup.py
src/face_python_service/resource/: zidane.jpg:Zone.Identifier
src/patrol_control_service/: CMakeLists.txt
src/patrol_control_service/src/: partol_client.cpp  partol_client2.cpp  turtle_control.cpp  turtle_control2.cpp  turtle_control3.cpp
src/status_display/: CMakeLists.txt  package.xml
src/status_display/src/: hello_qt.cpp  sys_status_display.cpp
src/status_interfaces/: CMakeLists.txt
src/status_interfaces/msg/: SystemStatus.msg
src/status_publisher/: package.xml  setup.py
(+127 files in other folders)
